--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,9 @@ body::-webkit-scrollbar {
     display: none; 
 }
 
+html{
+    background-image: url(../images/background.png);
+}
 #wrap{
     overflow: hidden;
 }
@@ -13,9 +16,21 @@ body::-webkit-scrollbar {
 .inner_box{
     margin:  50px 269px 50px 94px;
     background-color: #ffffff;
-    border: 4px solid #222222;
+    border: 4px solid #000000;
     border-radius: 20px;
     position: relative;
+    overflow-y: hidden;
+    width: 1548px;
+    height: 850px;
+}
+.inner_box > p {
+    position: absolute;
+    top: 16px;
+    left: 14PX;
+    z-index: 3;
+    color: #ffffff;
+    font-size: 1.3rem;
+    font-weight: 700;
 }
 #header{}
 #section{}
@@ -56,6 +71,8 @@ h1{
     font-size: 1.2rem;
     text-align: center;
     transform: translateX(-50%);
+    color: #000000;
+    line-height: 1.2rem;
 }
 #header .nav ul li:nth-child(1) a p, #header .nav ul li:nth-child(2) a p{
     bottom: 30%;
@@ -68,8 +85,8 @@ h1{
 .inner_box::after{
     content: '';
     width: 100%;
-    height: 79px;
-    background-color: #222222;
+    height: 55px;
+    background-color: #000000;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
     z-index: 2;
@@ -84,10 +101,35 @@ h1{
 }
 .inner_box > img{
     position: absolute;
+    width: 130px;
     right: 21px;
-    top: 23px;
+    top: 10px;
     z-index: 3;
 }
 
 
-/*********************footer****************************/
+/*********************스크롤 만들기****************************/
+#project_box{
+    overflow-y: scroll;
+    height: 100%;
+    margin-top: 38px;
+    box-sizing: border-box;
+}
+
+/*********************스크롤커스텀*************************/
+/* 스크롤바 설정*/
+.scroll::-webkit-scrollbar{
+    width: 11px;
+}
+
+/* 스크롤바 막대 설정*/
+.scroll::-webkit-scrollbar-thumb{
+    height: 17%;
+    background-color: #000000;
+    border-radius: 10px;  
+}
+
+/* 스크롤바 뒷 배경 설정*/
+.scroll::-webkit-scrollbar-track{
+    background-color: rgba(0,0,0,0.33);
+}
