--- a/css/style.css
+++ b/css/style.css
@@ -9,19 +9,18 @@ html{
     overflow: hidden;
 }
 
-.inner{
-    max-width: 1920px;
+.inner {
+    max-width: calc(100% - 200px);
     box-sizing: border-box;
 }
-.inner_box{
-    margin:  50px 269px 50px 94px;
+.inner_box {
     background-color: #ffffff;
     border: 4px solid #000000;
     border-radius: 20px;
     position: relative;
     overflow-y: hidden;
-    width: 1548px;
     height: 850px;
+    margin: 55px;
 }
 .inner_box > p {
     position: absolute;
@@ -32,7 +31,10 @@ html{
     font-size: 1.3rem;
     font-weight: 700;
 }
-#header{}
+#header {
+    float: right;
+    margin: 50px;
+}
 #section{}
 #footer{}
 
@@ -50,9 +52,7 @@ h1{
 }
 
 /*********************header****************************/
-#header .nav{
-    margin-right: 80px;
-    position:fixed;
+#header .nav {
     top: 0;
     right: 0;
 }
