--- a/css/project_style.css
+++ b/css/project_style.css
@@ -84,6 +84,42 @@
     background-color: #000000;
 }
 
+.web .lazy .slick-prev {
+    font-size: 0;
+    border: none;
+}
+.web .lazy .slick-prev::after{
+    content: ''; 
+    display: block; 
+    width:20px; 
+    height: 20px;
+    border-bottom:2px solid #a7a7a7; 
+    border-right: 2px solid #a7a7a7; 
+    margin: auto;
+    transform: rotate(133deg);
+    translate: (-2px -2px);
+    position: absolute;
+    bottom: 0px;
+    left: 41%;
+}
+.web .lazy .slick-next {
+    font-size: 0;
+    border: none;
+}
+.web .lazy .slick-next::after{
+    content: ''; 
+    display: block; 
+    width:20px; 
+    height:20px;
+    border-bottom:2px solid #a7a7a7; 
+    border-right: 2px solid #a7a7a7; 
+    margin: auto;
+    transform: rotate(-44deg);
+    translate: (-2px -2px);
+    position: absolute;
+    bottom: 0px;
+    right: 43%;
+}
 /************************graphic***********************/
 .graphic h1{
     margin-top: 200px;
@@ -103,32 +139,121 @@
     width: 529px;
     margin-bottom: 50px;
 }
-.graphic .graphic_img .graphic_left a {
+.graphic .graphic_img .graphic_left a, .graphic .graphic_img .graphic_right a {
     position: relative;
 }
-.graphic .graphic_img .graphic_left a div{
+.graphic .graphic_img .graphic_left a div, .graphic .graphic_img .graphic_right a div{
     display: none;
 }
-.graphic .graphic_img .graphic_left a:hover div{
+.graphic .graphic_img .graphic_left a div, .graphic .graphic_img .graphic_right a div{
     display: block;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0, 0.7);
     color: #ffffff;
     text-align: center;
 }
-.graphic .graphic_img .graphic_left a:hover div p:nth-child(1){
+.graphic .graphic_img .graphic_left a div p, .graphic .graphic_img .graphic_right a div p{
+    display: none;
+}
+.graphic .graphic_img .graphic_left a:hover div::after{
+    content: '';
+    display: block;
+    background-color: rgba(0,0,0, 0.7);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+.graphic .graphic_img .graphic_right a:hover div::after{
+    content: '';
+    display: block;
+    background-color: rgba(0,0,0, 0.7);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+.graphic .graphic_img .graphic_left a:hover div p{
+    width: 100%;
     font-size: 2.2rem;
     font-weight: 700;
     line-height: 1.2em;
+    /*margin-top: 50%;*/
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    text-align: center;
+    transform: translate(-50%, -50%);
 }
-.graphic .graphic_img .graphic_left a:hover div p:nth-child(2){
-    padding-top: 15px;
+.graphic .graphic_img .graphic_right a:hover div p{
+    width: 100%;
+    font-size: 2.2rem;
+    font-weight: 700;
+    line-height: 1.2em;
+    /*margin-top: 50%;*/
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    text-align: center;
+    transform: translate(-50%, -50%);
 }
-
+.graphic .graphic_img .graphic_left a:hover div p span{
+    font-size: 1.5rem;
+    font-weight: 400;
+}
+.graphic .graphic_img .graphic_right a:hover div p span{
+    font-size: 1.5rem;
+    font-weight: 400;
+}
+/* .modal > div span{
+    display: block;
+    position: absolute;
+    height: 80%;
+    top: 0;
+    left: 0;
+    background-color: red;
+}
+.modal:hover > div span:nth-child(1){
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 5px;
+    animation: border_width 0.1s;
+} 
+.modal:hover > div span:nth-child(2){
+    right: 0;
+    top: 0;
+    width: 5px;
+    height: 100%;
+    animation: border_height 0.1s;
+} 
+.modal:hover > div span:nth-child(3){
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 5px;
+    animation: border_width 0.2s;
+} 
+.modal:hover > div span:nth-child(4){
+    left: 0;
+    bottom: 0;
+    width: 5px;
+    height: 100%;
+    animation: border_height 0.3s;
+} 
+@keyframes border_width {
+    0% {width: 0%;}
+    100% {width: 100%;}
+}
+@keyframes border_height {
+    0% {height: 0%;}
+    100% {height: 100%;}
+} */
 /**************************팝업***********************/
 
 .pop {
