--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@ html{
 }
 #wrap{
     overflow: hidden;
+    width: 1920px;
+    min-width: 1900px;
 }
 
 .inner {
@@ -44,8 +46,8 @@ html{
     flex-direction: row;
 }
 
-h1{
-    font-size: 4rem;
+h1 {
+    font-size: 3rem;
     font-weight: 500;
     text-align: center;
     line-height: 1em;
