--- a/css/aboutme_style.css
+++ b/css/aboutme_style.css
@@ -11,7 +11,7 @@
     width: 466px;
     height: 577px;
     overflow: hidden;
-    /* margin-left: 150px; */
+    margin-left: 100px;
     margin-top: 160px;
 }
 .img img{
@@ -19,20 +19,23 @@
     height: auto;
     transform: translate(-4%, -19%);
 }
-.txt{
-    margin-top: 190px;
+.txt {
+    margin-top: 250px;
+    margin-right: 100px;
 }
-.txt h3{
+
+.txt h3 {
     font-weight: 700;
-    font-size: 2rem;
+    font-size: 1.3rem;
     line-height: 1.2em;
     padding-bottom: 10px;
 }
-.txt p{
-    font-size: 1.4rem;
+.txt p {
+    font-size: 1rem;
     font-weight: 400;
     line-height: 1.3em;
 }
+
 .txt div{
     padding-bottom: 50px;
 }
