--- a/css/style.css
+++ b/css/style.css
@@ -20,10 +20,11 @@ html{
     border: 4px solid #000000;
     border-radius: 20px;
     position: relative;
-    overflow-y: hidden;
+    /* overflow: hidden; */
     height: 850px;
     margin: 55px;
 }
+
 .inner_box > p {
     position: absolute;
     top: 16px;
@@ -33,6 +34,9 @@ html{
     font-size: 1.3rem;
     font-weight: 700;
 }
+
+
+
 #header {
     float: right;
     margin: 50px;
@@ -84,7 +88,7 @@ h1 {
 }
 
 /*********************section****************************/
-.inner_box::after{
+.inner_box::before{
     content: '';
     width: 100%;
     height: 55px;
@@ -97,9 +101,18 @@ h1 {
     top: 0;
     left: 0;
 }
-.inner_box::before{
+.inner_box::after{
     content: '';
     display: block;
+    width: 100%;
+    height: 100%;
+    background-color: #111111;
+    border-radius: 20px;
+    /* transform: translate(15px, -15px); */
+    position: absolute;
+    top: -12px;
+    left: 12px;
+    z-index: -50;
 }
 .inner_box > img{
     position: absolute;
@@ -113,7 +126,7 @@ h1 {
 /*********************스크롤 만들기****************************/
 #project_box{
     overflow-y: scroll;
-    height: 100%;
+    height: 812px;
     margin-top: 38px;
     box-sizing: border-box;
 }
@@ -134,4 +147,5 @@ h1 {
 /* 스크롤바 뒷 배경 설정*/
 .scroll::-webkit-scrollbar-track{
     background-color: rgba(0,0,0,0.33);
+    border-bottom-right-radius: 20px;
 }
