--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ html{
 
 #header {
     float: right;
-    margin: 50px;
+    margin: 50px 70px;
 }
 #section{}
 #footer{}
@@ -63,28 +63,26 @@ h1 {
     right: 0;
 }
 #header .nav ul li{
-    margin-bottom: 43px;
+    margin-bottom: 60px;
     position: relative;
 }
 #header .nav ul li a img{
-    width: 118px;
+    width: 100px;
     display: block;
 }
 #header .nav ul li a p{
     position: absolute;
-    bottom: 21%;
     left: 50%;
+    bottom: -33px;
     font-size: 1.2rem;
     text-align: center;
     transform: translateX(-50%);
     color: #000000;
     line-height: 1.2rem;
-}
-#header .nav ul li:nth-child(1) a p, #header .nav ul li:nth-child(2) a p{
-    bottom: 30%;
+
 }
 #header .nav ul li:nth-child(1){
-    margin-top: 175px;
+    margin-top: 150px;
 }
 
 /*********************section****************************/
