--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,10 @@ h1 {
     transform: translateX(-50%);
     color: #000000;
     line-height: 1.2rem;
-
+}
+#header .nav ul li:hover a p{
+    background-color: #5606FF;
+    color: #ffffff;
 }
 #header .nav ul li:nth-child(1){
     margin-top: 150px;
