--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,23 @@
+body{
+    background-image: url(../images/bg.png);
+    background-size: cover;
+}
 body::-webkit-scrollbar { 
     display: none; 
 }
 
 #wrap{
     overflow: hidden;
-    width: 1920px;
-    min-width: 1900px;
-    background-image: url(../images/bg.png);
-    z-index: -99;
+    width: 100%;
+    max-width: 1530px;
+    box-sizing: border-box;
+    margin: 35px auto;
+    padding: 20px 10px;
+    position: relative;
+
 }
 
-.inner {
-    max-width: 100%;
-    box-sizing: border-box;
-}
+
 .inner_box {
     background-color: #ffffff;
     border: 4px solid #000000;
@@ -21,8 +25,8 @@ body::-webkit-scrollbar {
     position: relative;
     /* overflow: hidden; */
     height: 850px;
-    width: 80%;
-    margin: 55px auto;
+  /*  width: 80%;
+    */
     display: flex;
     align-items: center;
 }
@@ -40,11 +44,11 @@ body::-webkit-scrollbar {
 
 
 #header {
-    width: 80%;
+    width: 100%;
     height: 100px;
     position: absolute;
-    top: 35px;
-    right: 200px;
+    top: 0;
+    right: 0;
     z-index: 50;
     display: flex;
     flex-wrap: nowrap;
@@ -73,11 +77,12 @@ h1 {
     font-weight: 700;
     color: #ffffff;
     margin-top: 40px;
-    margin-left: 20px;
+    margin-left: 30px;
 }
 #header .nav{
     vertical-align: middle;
     margin: auto 0;
+    padding-right: 30px;
 }
 #header .nav ul {
     display: flex;
@@ -114,7 +119,7 @@ h1 {
     background-color: #000000;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
-    z-index: 2;
+    z-index: 30;
     display: block;
     position: absolute;
     top: 0;
